add profile details hw-07

--- a/TV Shows/Modules/Home/Home.storyboard
+++ b/TV Shows/Modules/Home/Home.storyboard
@@ -343,6 +343,83 @@
             </objects>
             <point key="canvasLocation" x="2610" y="60"/>
         </scene>
+        <!--Profile Details View Controller-->
+        <scene sceneID="HlG-pX-p6S">
+            <objects>
+                <viewController storyboardIdentifier="ProfileDetailsViewController" id="WeG-gG-wxI" customClass="ProfileDetailsViewController" customModule="TV_Shows" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FQM-gQ-bBb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKc-xH-Quu">
+                                <rect key="frame" x="20" y="69" width="44.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVb-mM-pKg">
+                                <rect key="frame" x="20" y="114.5" width="374" height="100"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-profile-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dlS-MP-NNR">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="wfT-5z-K9K"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hic-cX-CxM">
+                                        <rect key="frame" x="100" y="0.0" width="274" height="100"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="Change Profile Photo">
+                                            <color key="titleColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changeProfilePhotoButtonHandler" destination="WeG-gG-wxI" eventType="touchUpInside" id="Iue-l9-CN7"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="F6j-EP-xtJ"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NUW-Ct-fJQ">
+                                <rect key="frame" x="20" y="239.5" width="374" height="45"/>
+                                <color key="backgroundColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="FeN-YB-bTS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Logout">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="logoutButtonHandler" destination="WeG-gG-wxI" eventType="touchUpInside" id="XKz-Iv-1fo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LvZ-7h-aPU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NUW-Ct-fJQ" firstAttribute="leading" secondItem="LvZ-7h-aPU" secondAttribute="leading" constant="20" id="0pQ-7R-Lpb"/>
+                            <constraint firstItem="kKc-xH-Quu" firstAttribute="top" secondItem="LvZ-7h-aPU" secondAttribute="top" constant="25" id="2Qe-hp-Gxz"/>
+                            <constraint firstItem="LvZ-7h-aPU" firstAttribute="trailing" secondItem="BVb-mM-pKg" secondAttribute="trailing" constant="20" id="KdK-Op-TxA"/>
+                            <constraint firstItem="LvZ-7h-aPU" firstAttribute="trailing" secondItem="NUW-Ct-fJQ" secondAttribute="trailing" constant="20" id="Nn4-Ue-rGH"/>
+                            <constraint firstItem="BVb-mM-pKg" firstAttribute="top" secondItem="kKc-xH-Quu" secondAttribute="bottom" constant="25" id="jrK-5c-blq"/>
+                            <constraint firstItem="NUW-Ct-fJQ" firstAttribute="top" secondItem="BVb-mM-pKg" secondAttribute="bottom" constant="25" id="lo5-bm-aSs"/>
+                            <constraint firstItem="kKc-xH-Quu" firstAttribute="leading" secondItem="LvZ-7h-aPU" secondAttribute="leading" constant="20" id="wKz-NV-AT9"/>
+                            <constraint firstItem="BVb-mM-pKg" firstAttribute="leading" secondItem="LvZ-7h-aPU" secondAttribute="leading" constant="20" id="wxs-B7-24y"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="changeProfilePhotoButton" destination="hic-cX-CxM" id="9gP-JR-Bgo"/>
+                        <outlet property="emailLabel" destination="kKc-xH-Quu" id="AeH-y7-bYf"/>
+                        <outlet property="logoutButton" destination="NUW-Ct-fJQ" id="MIf-fn-UFy"/>
+                        <outlet property="profilePhoto" destination="dlS-MP-NNR" id="tgQ-F8-80K"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MyW-j0-Pnq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3484" y="60"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="RTO-eo-Dcd">
             <objects>
