--- a/TV Shows/Modules/Home/Home.storyboard
+++ b/TV Shows/Modules/Home/Home.storyboard
@@ -117,6 +117,9 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0s-9G-Biz">
                                                     <rect key="frame" x="20" y="511" width="93" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="29" id="fUI-Zx-Dpa"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -130,6 +133,9 @@
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S0F-Fi-atv">
                                                     <rect key="frame" x="20" y="548" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="n2h-S5-wce"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -149,6 +155,7 @@
                                                 <constraint firstItem="lgB-0q-NeO" firstAttribute="top" secondItem="b5E-0g-XPF" secondAttribute="bottom" constant="20" id="ktX-Xy-XCn"/>
                                                 <constraint firstItem="lgB-0q-NeO" firstAttribute="leading" secondItem="8F0-FV-kmD" secondAttribute="leading" constant="20" id="naR-Bu-E8N"/>
                                                 <constraint firstItem="b5E-0g-XPF" firstAttribute="leading" secondItem="8F0-FV-kmD" secondAttribute="leadingMargin" constant="20" id="xfH-X1-cns"/>
+                                                <constraint firstItem="S0F-Fi-atv" firstAttribute="top" secondItem="m0s-9G-Biz" secondAttribute="bottom" constant="8" id="zt0-DL-N3I"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
